# shut-the-box

./: .gitignore  shut-the-box.cabal  stack.yaml
src/: Main.hs
src/ShutTheBox/: Console.hs  Logic.hs  Pretty.hs  Types.hs
